--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
 		"ts-node": ">=8.0.0",
 		"typechain": "^8.3.0",
 		"typescript": ">=4.5.0"
+	},
+	"dependencies": {
+		"@elastic/elasticsearch": "^8.15.1",
+		"@openzeppelin/merkle-tree": "^1.0.7",
+		"dotenv": "^16.4.5",
+		"zod": "^3.23.8"
 	}
 }
