--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-ES_HOST = http://localhost:9200
-ES_API_KEY = "RnhOQ201SUJHRmhDM1libFNIcDg6VWdGNzNvRzZTYmk4aHp2RWt3QmVxdw=="
-RPC_NODE = http://localhost:8545
-SMART_CONTRACT = 0x5FbDB2315678afecb367f032d93F642f64180aa3
+ES_HOST        = "http://localhost:9200"
+ES_API_KEY     = "es_api_key"
+RPC_NODE       = "http://localhost:8545"
+SMART_CONTRACT = "0x000"
+PRIVATE_KEY    = "0x000"
