:sparkles: add server

--- a/elk/logstash/pipeline/logstash.conf
+++ b/elk/logstash/pipeline/logstash.conf
@@ -20,10 +20,17 @@ filter {
 
 output {
   stdout { }
-  elasticsearch {
-    index => "log-%{+YYYY.MM.dd.HH.mm}"
-		hosts => "elasticsearch:9200"
-		user => "elastic"
-		password => "changeme"
-  }
+  # elasticsearch {
+  #   index => "log-%{+YYYY.MM.dd.HH.mm}"
+	# 	hosts => "elasticsearch:9200"
+	# 	user => "elastic"
+	# 	password => "changeme"
+  # }
+  # output {
+  #   http {
+  #     url => "http://localhost:5612/data"
+  #     http_method => "post"
+  #     format => "json"
+  #   }
+  # }
 }
