--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
     "@types/chai": "^4.2.0",
+    "@types/express": "^5.0.0",
     "@types/mocha": ">=9.1.0",
     "@types/node": ">=18.0.0",
     "chai": "^4.5.0",
@@ -29,6 +30,7 @@
     "@openzeppelin/merkle-tree": "^1.0.7",
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "zod": "^3.23.8"
   }
 }
