:sparkles: add rabbitmq

--- a/elk/.env.example
+++ b/elk/.env.example
@@ -7,3 +7,7 @@ FILEBEAT_INTERNAL_PASSWORD   = ""
 HEARTBEAT_INTERNAL_PASSWORD  = ""
 MONITORING_INTERNAL_PASSWORD = ""
 BEATS_SYSTEM_PASSWORD        = ""
+
+RABBITMQ_VERSION = "3-management"
+RABBITMQ_DEFAULT_USER = "rabbit"
+RABBITMQ_DEFAULT_PASS = "changeme"
