--- a/elk/logstash/pipeline/logstash.conf
+++ b/elk/logstash/pipeline/logstash.conf
@@ -20,17 +20,16 @@ filter {
 
 output {
   stdout { }
-  # elasticsearch {
-  #   index => "log-%{+YYYY.MM.dd.HH.mm}"
-	# 	hosts => "elasticsearch:9200"
-	# 	user => "elastic"
-	# 	password => "changeme"
-  # }
-  # output {
-  #   http {
-  #     url => "http://localhost:5612/data"
-  #     http_method => "post"
-  #     format => "json"
-  #   }
-  # }
+
+  rabbitmq {
+    host => "rabbitmq"
+    port => 5672
+    user => "rabbit"
+    password => "changeme"
+    exchange => "log_exchange"
+    exchange_type => "direct"
+    key => "logstash_key"
+    durable => true
+    persistent => true
+  }
 }
