--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@nomicfoundation/hardhat-verify": "^2.0.0",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
+    "@types/amqplib": "^0.10.5",
     "@types/chai": "^4.2.0",
-    "@types/express": "^5.0.0",
     "@types/mocha": ">=9.1.0",
     "@types/node": ">=18.0.0",
     "chai": "^4.5.0",
@@ -28,9 +28,9 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.15.1",
     "@openzeppelin/merkle-tree": "^1.0.7",
+    "amqplib": "^0.10.4",
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
     "zod": "^3.23.8"
   }
 }
