:closed_lock_with_key: update docker compose with rabbitmq

--- a/elk/logstash/pipeline/logstash.conf
+++ b/elk/logstash/pipeline/logstash.conf
@@ -13,8 +13,12 @@ filter {
   }
   date {
     match => ["timestamp", "dd/MMM/yyyy:HH:mm:ss Z"]
-    target => "@timestamp"
+    target => "timestamp"
     timezone => "UTC"
+  }
+
+  mutate {
+    remove_field => ["event", "log", "@timestamp", "@version", "host"]
   }
 }
 
@@ -24,11 +28,11 @@ output {
   rabbitmq {
     host => "rabbitmq"
     port => 5672
-    user => "rabbit"
-    password => "changeme"
-    exchange => "log_exchange"
+    user => "${RABBITMQ_DEFAULT_USER}"
+    password => "${RABBITMQ_DEFAULT_PASS}"
+    exchange => "logstash_exchange"
     exchange_type => "direct"
-    key => "logstash_key"
+    key => "logstash_queue"
     durable => true
     persistent => true
   }
