:construction: update docker compose rabbitmq to deploy with defs

--- a/elk/.env.example
+++ b/elk/.env.example
@@ -9,5 +9,5 @@ MONITORING_INTERNAL_PASSWORD = ""
 BEATS_SYSTEM_PASSWORD        = ""
 
 RABBITMQ_VERSION      = "4-management"
-RABBITMQ_DEFAULT_USER = "rabbit"
-RABBITMQ_DEFAULT_PASS = "changeme"
+RABBITMQ_USER = "rabbit"
+RABBITMQ_PASS = "changeme"
