--- a/elk/logstash/pipeline/logstash.conf
+++ b/elk/logstash/pipeline/logstash.conf
@@ -28,11 +28,10 @@ output {
   rabbitmq {
     host => "rabbitmq"
     port => 5672
-    user => "${RABBITMQ_DEFAULT_USER}"
-    password => "${RABBITMQ_DEFAULT_PASS}"
-    exchange => "logstash_exchange"
-    exchange_type => "direct"
-    key => "logstash_queue"
+    user => "${RABBITMQ_USER}"
+    password => "${RABBITMQ_PASS}"
+    exchange => "logstash.exchange"
+    exchange_type => "fanout"
     durable => true
     persistent => true
   }
